Fixes pins with icons not showing titles

--- a/src-built-in/components/assets/css/_toolbar.css
+++ b/src-built-in/components/assets/css/_toolbar.css
@@ -133,6 +133,7 @@
 img.pinned-icon {
     padding-top: var(--pinned-icon-padding-top);
     max-width: 17px;
+    float: left;
 }
 
 .pinned-icon {
